--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,8 @@ terminaltables==3.1.10
 threadpoolctl==3.1.0
 tifffile==2021.11.2
 timm==0.5.4
-torch==1.7.1
-torchaudio==0.8.1
 torchcontrib==0.0.2
-torchvision==0.8.2
+torch==1.8.0+cu111
+torchvision==0.9.0+cu111
+torchaudio==0.8.0
 tqdm==4.64.0
